--- a/src/i18n/ua/translations.json
+++ b/src/i18n/ua/translations.json
@@ -28,7 +28,12 @@
       "logout": "Вийти",
       "place-advertisement": "Розмістити оголошення",
       "find": "Пошук",
-      "view-on-map": "ПЕРЕГЛЯНУТИ НА КАРТІ"
+      "view-on-map": "ПЕРЕГЛЯНУТИ НА КАРТІ",
+      "all-provider-objects": "Всі об'єкти постачальника",
+      "land-registry": "Запит з земельної книги",
+      "contact-provider": "Зв'язатися з постачальником",
+      "read-more": "Читати далі",
+      "hide": "Сховати"
     },
     "real-estate": {
       "type": {
@@ -48,7 +53,16 @@
         "verified-title": "ПЕРЕВІРЕНО FYLPI"
       },
       "rooms": "Кімнати",
-      "bathroom": "Ванні кімнати"
+      "bathroom": "Ванні кімнати",
+      "details": {
+        "contact-provider": {
+          "title": "ЗВ'ЯЖІТЬСЯ З ПОСТАЧАЛЬНИКОМ",
+          "p1": "Ця чудова резиденція розташована високо над пагорбами та пропонує незрівнянний вид на Відень і над ним навколишній мальовничий ландшафт. Простора вхідна зона відразу передає відчуття розкоші, комфорту та ексклюзивності. Вікна від підлоги до стелі в центральній вітальні заливають кімнату природного освітлення та пропонують чарівний вид на зелений оазис внутрішнього саду, який гармонійно вписується в панорамний пейзаж. Фітнес-зал з критим басейном, джакузі а сауна пропонує все необхідне для живлення вашого тіла та розуму зміцнити і відновити. У просторому гаражі є Електрична зарядна станція та пропонує парковку для трьох автомобілів.Ззовні території цього помешкання відкривається приголомшливий вид багато місця для патіо, барбекю, спортивних заходів і навіть Надвірна сауна.",
+          "p2": "Клостернойбург – це місто з багатою історією, чудовою архітектурою та ідилічним розташуванням на березі Дунаю. Місто пропонує першокласну інфраструктуру з хорошим транспортним сполученням, високоякісні навчальні заклади, комплексну медичну допомогу та широкий вибір торгових можливостей. Численні об’єкти відпочинку, зокрема спортивні клуби та парки, а також жвава культурна сцена з музеями та культурними заходами збагачують міське життя. Ольберг, мальовничий район у Клостернойбурзі, пропонує не лише ідилічне житлове розташування, але й захоплюючі види на Відень, що лежить біля його підніжжя. Добре сплановане транспортне сполучення дозволяє мешканцям швидко дістатися до центру міста Клостернойбург, Відня та інших міст. Це дозволяє їм насолоджуватися перевагами заміського життя, одночасно користуючись зручностями та добре розвиненою інфраструктурою великих міст."
+        },
+        "click-here-tour": "Натисніть тут, щоб ознайомитися з туром",
+        "address-not-published": "* Точна адреса не опублікована. Будь ласка, зв'яжіться з постачальником."
+      }
     },
     "services": {
       "buy": {
