--- a/src/i18n/de/translations.json
+++ b/src/i18n/de/translations.json
@@ -58,10 +58,80 @@
         "contact-provider": {
           "title": "KONTAKTIEREN SIE DEN ANBIETER",
           "p1": "Diese prächtige Residenz liegt hoch über den sanften Hügeln und bietet einen unvergleichlichen Ausblick bis über Wien herunter und auf die umliegende malerische Landschaft. Der großzügige Eingangsbereich vermittelt sofort das Gefühl von Luxus, Komfort und Exklusivität. Die  bodentiefen Fenster im zentralen Wohnbereich fluten den Raum mit\n          natürlichem Licht und bieten dabei einen zauberhaften Blick auf die\n          grüne Oase des hauseigenen Gartens, der sich harmonisch in die\n          Panoramalandschaft einfügt. Der Fitnessraum mit Indoor-Pool, Whirlpool\n          und Sauna bietet alles, was Sie benötigen, um Körper und Geist zu stärken und sich zu erholen. Die geräumige Garage verfügt über eine\n          Elektroladestation und bietet Parkplatz für drei Autos. Der Außenbereich dieses Anwesens bietet eine atemberaubende Aussicht und viel Platz für Terrassen, Grillabende, Sportaktivitäten und sogar eine Outdoor Sauna.",
-          "p2": "Klosterneuburg ist eine Stadt mit reicher Geschichte, großartiger Architektur und idyllischer Lage an der Donau. Die Stadt bietet eine erstklassige Infrastruktur mit guten Verkehrsanbindungen, hochwertigen Bildungseinrichtungen, umfassender Gesundheitsversorgung und einem breiten Angebot an Einkaufsmöglichkeiten. Zahlreiche Freizeiteinrichtungen, darunter Sportvereine und Parks, sowie eine lebendige Kulturszene mit Museen und kulturellen Veranstaltungen bereichern das städtische Leben. Ölberg, ein malerischer Stadtteil in Klosterneuburg, bietet nicht nur eine idyllische Wohnlage, sondern auch einen atemberaubenden Blick auf Wien, das ihm zu Füßen liegt. Durch gut geplante Verkehrsanbindungen können die Bewohner das Stadtzentrum von Klosterneuburg, Wien und darüber hinaus schnell erreichen. So können sie die Vorteile des Landlebens genießen und gleichzeitig von den Annehmlichkeiten und der gut ausgebauten Infrastruktur der Großstädte profitieren."
+          "p2": "Klosterneuburg ist eine Stadt mit reicher Geschichte, großartiger Architektur und idyllischer Lage an der Donau. Die Stadt bietet eine erstklassige Infrastruktur mit guten Verkehrsanbindungen, hochwertigen Bildungseinrichtungen, umfassender Gesundheitsversorgung und einem breiten Angebot an Einkaufsmöglichkeiten. Zahlreiche Freizeiteinrichtungen, darunter Sportvereine und Parks, sowie eine lebendige Kulturszene mit Museen und kulturellen Veranstaltungen bereichern das städtische Leben. Ölberg, ein malerischer Stadtteil in Klosterneuburg, bietet nicht nur eine idyllische Wohnlage, sondern auch einen atemberaubenden Blick auf Wien, das ihm zu Füßen liegt. Durch gut geplante Verkehrsanbindungen können die Bewohner das Stadtzentrum von Klosterneuburg, Wien und darüber hinaus schnell erreichen. So können sie die Vorteile des Landlebens genießen und gleichzeitig von den Annehmlichkeiten und der gut ausgebauten Infrastruktur der Großstädte profitieren.",
+          "provider-descr": "Durch Drücken der Schaltfläche \"Nachricht senden\" stimmen Sie zu, dass fylpi und seine Partner sowie Immobilienprofis Sie bezüglich Ihrer Anfrage anrufen/benachrichtigen dürfen, möglicherweise unter Verwendung automatisierter Mittel und vorab aufgezeichneter/künstlicher Stimmen. Sie müssen nicht zustimmen, um eine Immobilie, Waren oder Dienstleistungen zu kaufen. Nachrichten- und Datentarife können anfallen. Sie stimmen auch unseren Nutzungsbedingungen zu. Fylpi unterstützt keine bestimmten Immobilienprofis. Wir können Informationen über Ihre jüngsten und zukünftigen Aktivitäten auf der Website mit Ihrem Agenten teilen, um ihm zu helfen, zu verstehen, wonach Sie in einem Zuhause suchen."
         },
         "click-here-tour": "Hier geht es zum Rundgang",
-        "address-not-published": "* Die genaue Adresse ist nicht veröffentlicht. Bitte kontaktieren Sieden Anbieter."
+        "address-not-published": "* Die genaue Adresse ist nicht veröffentlicht. Bitte kontaktieren Sieden Anbieter.",
+        "modal": {
+          "cost-notification": {
+            "title": "KOSTENBENACHRICHTIGUNG",
+            "description": "Die Kosten für den Grundbuchauszug betragen 10,00 €. Bitte bestätigen Sie, um fortzufahren."
+          },
+          "email": {
+            "title": "E-MAIL-ADRESSE ANGEBEN",
+            "description": " Bitte geben Sie die E-Mail-Adresse an, an die der Grundbuchauszug gesendet werden soll."
+          },
+          "confirmation": {
+            "title": "ZAHLUNGSBESTÄTIGUNG",
+            "description": " Vielen Dank! Ihre Zahlung war erfolgreich. Der Grundbuchauszug wird Ihnen innerhalb der nächsten 24 Stunden an die angegebene E-Mail-Adresse gesendet."
+          }
+        },
+        "detail-info": {
+          "premises": {
+            "title": "RÄUMLICHKEITEN",
+            "living-space": "Wohnraum",
+            "bathroom": "Badezimmer",
+            "ground-floor": "Erdgeschoss",
+            "adjoining-room": "Nebenraum",
+            "gallery": "Gallerie",
+            "bedroom1": "Schlafzimmer 1, 1 Stock",
+            "bedroom2": "Schlafzimmer 2, 1 Stock",
+            "bedroom3": "Schlafzimmer 3, 1 Stock",
+            "bedroom4": "Schlafzimmer 4, 1 Stock",
+            "guest-room": "Gästezimmer",
+            "wellness-area": "Wellnessbereich",
+            "wellness-room-living-area": "Wellnessraum Wohnbereich",
+            "pool": "Schwimmhalle",
+            "fitness": "Fitness",
+            "fitness-pool": "Schwimmhalle + Fitness",
+            "wine-cellar": "Weinkeller",
+            "technical-room": "Technikraum",
+            "outdoor-area": "Außenbereich",
+            "garage": "Garage",
+            "garden": "Garten",
+            "bedroom-with-wardrobe": "Schlafzimmer mit Garderobe Erdgeschoss",
+            "wc": "WC"
+          },
+          "equipments": {
+            "title": "AUSSTATTUNG",
+            "outlook": "Ausblick",
+            "view": "Bergblick, Grünblick, Fernblick, Stadtblick",
+            "kitchen": "Küche",
+            "kitchen-type": "Einbauküche, Wohnküche",
+            "floor": "Boden",
+            "floor-type": "Fliesen, Parkett",
+            "windows": "Fenster",
+            "windows-type": "Innenliegender Sonnenschutz, Mehrfachverglasung, Kunststofffenster",
+            "extra": "Extras",
+            "extra-equip": "Abstellraum, Dampfbad, Fitnessraum, Grillstelle, Kinderspielplatz, Swimmingpool, Wasch-Trockenraum, Whirlpool, Alarmanlage, Sauna, Weinkeller, Wellnessbereich, Wintergarten, Bad mit Fenster, Badewanne"
+          },
+          "fees": {
+            "title": "GEBÜHREN",
+            "transfer-tax": "Grunderwerbsteuer",
+            "land-registry": "Grundbucheintragung",
+            "purchase-agreement": "Kaufvertragserrichtung",
+            "purchase-agreement-descr": "nach dem Tarif des jeweiligen Urkundenrichters"
+          },
+          "monthly_costs": {
+            "title": "MONATLICHE KOSTEN",
+            "operating-costs": "Betriebskosten",
+            "heating": "Heizung inkl. UST"
+          }
+        },
+        "providers-objects": {
+          "title": "ALLE OBJEKTE DES ANBIETERS"
+        }
       }
     },
     "services": {
@@ -364,7 +434,9 @@
       "type": "Typ",
       "price": "Preis",
       "area": "Fläche",
-      "address": "Bundesland, Ort oder Postleitzahl"
+      "address": "Bundesland, Ort oder Postleitzahl",
+      "filter-state-open": "Filter öffnen",
+      "filter-state-close": "Geschlossener Filter"
     },
     "title": "FINDEN SIE IHRE IMMOBILIE IN ÖSTERREICH",
     "links": {
