--- a/src/i18n/ua/translations.json
+++ b/src/i18n/ua/translations.json
@@ -14,7 +14,7 @@
     },
     "not-found": {
       "title": "404",
-      "tdescriptionitle": " Error 404 - Ця сторінка не існує. Спробуйте почати з головної сторінки.",
+      "description": " Error 404 - Ця сторінка не існує. Спробуйте почати з головної сторінки.",
       "button": "На головну"
     },
     "errors": {
@@ -24,8 +24,48 @@
     "my-account": {
       "title": "Мій аккаунт"
     },
+    "ads": {
+      "title": "Мої оголошення"
+    },
+    "rent-ads": {
+      "title": "Оренда "
+    },
+    "sell-ads": {
+      "title": "Продаж "
+    },
     "profile": {
-      "title": "Профіль"
+      "title": "Профіль",
+      "verification": {
+        "title": {
+          "not-verified": "Виконайте перевірку",
+          "verified": "Верифіковано"
+        },
+        "modal": {
+          "p1": "Щоб завершити процес перевірки, завантажте свою ліцензію. Підтримувані формати файлів: JPG, PNG, PDF. Максимальний розмір файлу: 5 МБ. Переконайтеся, що всі дані в ліцензії чіткі.",
+          "p2": "Ваш документ успішно завантажено. Якщо ви бажаєте завершити процес перевірки, натисніть кнопку «Надіслати».",
+          "p3": "Ми отримали ваші документи та розглянемо їх протягом наступних 72 годин. Якщо все в порядку, ви побачите значок підтвердження у своєму профілі. Більше нічого робити не потрібно."
+        }
+      },
+      "form": {
+        "name": "Ім'я",
+        "last-name": "Прізвище",
+        "email": "Пошта",
+        "tel": "Телефон",
+        "password": {
+          "main": "Пароль",
+          "extra": "Змінити пароль"
+        },
+        "agency": {
+          "main": "Агенство",
+          "extra": "Назва агентства"
+        },
+        "private": "Приватна особа",
+        "city": "Місто",
+        "province": {
+          "main": "Провінція",
+          "extra": "Штат чи провінція"
+        }
+      }
     },
     "buttons": {
       "prev": "Назад",
@@ -45,7 +85,11 @@
       "messages": "Мої повідомлення",
       "favorite": "Вибране",
       "photo-video": "Замовити фото/відео",
-      "payment-options": "Варіанти оплати"
+      "payment-options": "Варіанти оплати",
+      "save": "Зберегти",
+      "upload-doc": "Завантажити документ",
+      "send": "Надіслати",
+      "understood": "Зрозуміло"
     },
     "knowledge-real-estate": {
       "title": "Інформація про нерухомість ",
