feat: add estates to ads page

--- a/src/i18n/de/translations.json
+++ b/src/i18n/de/translations.json
@@ -29,6 +29,18 @@
     "sell-ads": {
       "title": "Vermieten "
     },
+    "active": {
+      "title": "Aktiv "
+    },
+    "inactive": {
+      "title": "Inaktiv "
+    },
+    "moderation": {
+      "title": "Zur Mäßigung"
+    },
+    "rejected": {
+      "title": "Ablehnungen "
+    },
     "profile": {
       "title": "Profile ",
       "verification": {
