--- a/src/i18n/ua/translations.json
+++ b/src/i18n/ua/translations.json
@@ -1,7 +1,8 @@
 {
   "translation": {
     "common": {
-      "postal-code": "Поштовий індекс"
+      "postal-code": "Поштовий індекс",
+      "top": "Топ"
     },
     "rent": {
       "title": "Оренда "
@@ -25,7 +26,28 @@
       "title": "Мій аккаунт"
     },
     "ads": {
-      "title": "Мої оголошення"
+      "title": "Мої оголошення",
+      "no-ads": "Зараз у вас немає оголошень.",
+      "modal": {
+        "rejected-reason": {
+          "title": "ПРИЧИНА ВІДМОВИ",
+          "p": "Ваше оголошення відхилено, оскільки зображення не відповідають стандартам якості. Ви можете виправити помилки та відправити оголошення на повторну модерацію, натиснувши кнопку «Перезапустити»."
+        },
+        "increase-top": {
+          "main": {
+            "title": "ПІДНЯТИ ДО ТОП ОГОЛОШЕННЬ",
+            "p": "Виберіть потрібну тривалість і перегляньте відповідні витрати. Після успішної оплати ваше оголошення автоматично потрапить в топ оголошень."
+          },
+          "success": {
+            "title": "ОПЛАТА УСПІШНА",
+            "p": "Дякємо! Ваш платіж пройшов успішно. Ми раді, що ви обрали нас. Ваше оголошення успішно розміщено в топі оголошень."
+          },
+          "rejected": {
+            "title":"ПОМИЛКА",
+            "p": "Виникла проблема. Спробуйте пізніше. Дякуємо за розуміння. Або напишіть нам, ми з радістю вам допоможемо."
+          }
+        }
+      }
     },
     "rent-ads": {
       "title": "Оренда "
@@ -101,7 +123,10 @@
       "save": "Зберегти",
       "upload-doc": "Завантажити документ",
       "send": "Надіслати",
-      "understood": "Зрозуміло"
+      "understood": "Зрозуміло",
+      "find-reason": "З'ясуйте причину",
+      "create-ad": "Створити оголошення",
+      "pay": "Оплатити"
     },
     "knowledge-real-estate": {
       "title": "Інформація про нерухомість ",
