feat: create ads details page form

--- a/src/i18n/de/translations.json
+++ b/src/i18n/de/translations.json
@@ -11,7 +11,19 @@
       "title": "Kaufen "
     },
     "details": {
-      "title": " details"
+      "title": "Detail "
+    },
+    "premises": {
+      "title": "Räumlichkeiten "
+    },
+    "equipments": {
+      "title": "Ausstattung "
+    },
+    "fees": {
+      "title": "Gebühren "
+    },
+    "monthly-costs": {
+      "title": "Monatliche Kosten "
     },
     "not-found": {
       "title": "404",
